    directory). (Anatol)
  . Fixed bug #74149 (static embed SAPI linkage error). (krakjoe)
  . Fixed bug #72359, bug #72451, bug #73706, bug #71115 and others related
    to interned strings handling in TS builds. (Anatol, Dmitry)
  . Implemented "Trailing Commas In List Syntax" RFC for group use lists only.
    (Sammy Kaye Powers)

- BCMath:
  . Fixed bug #46564 (bcmod truncates fractionals). (liborm85)

- Calendar:
  . Fix integer overflows (Joshua Rogers)

- Date:
  . Fixed bug #69587 (DateInterval properties and isset). (jhdxr)
  . Fixed bug #74404 (Wrong reflection on DateTimeZone::getTransitions).
    (krakjoe)
  . Fixed bug #74080 (add constant for RFC7231 format datetime). (duncan3dc)

- DOM:
  . Fixed bug #67474 (getElementsByTagNameNS filter on default ns). (aboks)
  . Fixed bug #54382 (getAttributeNodeNS doesn't get xmlns* attributes).
    (aboks)
  . Fixed bug #74004 (LIBXML_NOWARNING (etc) ignored by DOMDocument::loadHTML).
    (somedaysummer)

- EXIF:
  . Added support for vendor specific tags for the following formats:
    Samsung, DJI, Panasonic, Sony, Pentax, Minolta & Sigma/Foveon. (Kalle)
  . Fixed bug #72682 (exif_read_data() fails to read all data for some
    images). (Kalle)
  . Fixed bug #71534 (Type confusion in exif_read_data() leading to heap
    overflow in debug mode). (hlt99 at blinkenshell dot org, Kalle)
  . Fixed bug #68547 (Exif Header component value check error).
    (sjh21a at gmail dot com, Kalle)
  . Fixed bug #66443 (Corrupt EXIF header: maximum directory nesting level
    reached for some cameras). (Kalle)
  . Fixed Redhat bug #1362571 (PHP not returning full results for
    exif_read_data function). (Kalle)

- FPM:
  . Configuration to limit fpm slow log trace callers. (Sannis)
  . Fixed bug #69865 (php-fpm does not close stderr when using syslog). 
    (Mike)

- FTP:
  . Implement MLSD for structured listing of directories. (blar)

- GD:
  . Implemented imageresolution as getter and setter (Christoph)